--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,52 @@
-nav {
+/* General Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Body styling */
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-color: #f4f4f4;
+}
+
+/* Header styling */
+header {
   background-color: #333;
-  padding: 10px;
+  color: white;
+  padding: 20px 0;
+
+  text-align: center;
+}
+
+header .container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+header h1 {
+  border: 2px solid hsl(0, 90%, 49%);
+  margin: 5px;
+  text-align: center;
+  font-size: 2em;
+}
+
+nav {
+  border: 2px solid hsl(0, 90%, 49%);
+  margin-top: 10px;
+  margin: 5px;
 }
 
 nav ul {
   list-style: none;
-  display: flex;
-  justify-content: space-around;
   padding: 0;
-  margin: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
 }
 
 nav ul li a {
@@ -18,6 +56,100 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #1da1f2; /* Highlight LinkedIn link */
   text-decoration: underline;
+}
+.section1 {
+  box-shadow: 5px 5px 5px gray;
+  border: 2px solid red;
+  padding: 6px;
+  margin: 5px;
+  width: 66%;
+  max-width: 66%;
+}
+.article1 {
+  box-shadow: 5px 5px 5px gray;
+  border: 2px solid red;
+  padding: 6px;
+  margin: 5px;
+  width: 66%;
+  max-width: 66%;
+  min-width: 100px;
+}
+.aside1 {
+  box-shadow: 5px 5px 5px gray;
+  font-size: 10px;
+  border: 2px solid red;
+  padding: 6px;
+  margin: 5px;
+  margin-bottom: 10px;
+  float: right;
+  box-shadow: outset 5px;
+  width: 31%;
+  max-width: 31%;
+  min-width: 100px;
+}
+
+/* Main content styling */
+main {
+  padding: 40px 0;
+  /* background-color: #fff; */
+  /* color: #333; */
+  /* Background shorthand example */
+}
+
+/* 
+    main .content {
+      width: 80%;
+      margin: 0 auto;
+    } */
+
+/* main h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    } */
+
+/* main p {
+      font-size: 1.1em;
+      line-height: 1.6;
+    } */
+
+/* Footer styling */
+footer {
+  background-color: #333;
+
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+}
+footer p {
+  border: 2px solid red;
+  margin: 6px;
+}
+
+footer a {
+  color: #ffcc00;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+.pageh4 {
+  box-shadow: 5px 5px 5px gray;
+  border: 2px solid red;
+  margin: 6px;
+  text-align: center;
+  margin: 8px;
+}
+.aboutme {
+  box-shadow: 5px 5px 5px gray;
+  border: 2px solid red;
+  margin: 6px;
+  padding: 5px;
+  margin: 2px;
+  text-align: left;
+  text-indent: 8%;
+}
+.aboutme p {
+  box-shadow: 5px 5px 5px gray;
 }
